objects/EloquaCampaignMemberStatus__c.object
<CustomObject>
    <fields>
        <fullName>HasResponded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasResponded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Eloqua April Release 2015: To Store new status for Campaign Members</description>
    <label>EloquaCampaignMemberStatus</label>
</CustomObject>